   src/printing.c, src/callbacks.c:
   Rename utils_str_replace() utils_str_replace_all(), setting a
   'gchar **haystack' argument instead of returning a new string.
 * src/editor.c:
   For the Tabs indent type, remove spaces when unindenting (only) if
   there are no tabs on the line.
   Group undo actions for (un)indenting of multiple lines.


2009-07-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c:
   Start unifying usage of @a and @c markup elements in API docs,
   to be continued.
 * src/main.c, src/prefs.c, src/toolbar.c, src/toolbar.h:
   Show/hide the toolbar without a restart when the setting in the
   preferences dialog is changed (closes #2824785).
 * src/dialogs.c, src/document.c, src/editor.c, src/encodings.c,
   src/filetypes.c, src/keybindings.h, src/main.c, src/msgwindow.c,
   src/navqueue.c, src/plugindata.h, src/prefs.c, src/toolbar.c,
   src/toolbar.h:
   Continue unifying usage of @a and @c markup elements in API docs.


2009-07-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Remove relative/untidy path elements when creating new documents
   with a filename (e.g. from the command-line) (#2823998).


2009-07-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c:
   Disable 'Recent Projects' menu item if the list of recent projects
   is empty.
 * src/win32.c:
   Fix some harmless compiler warnings.
 * plugins/geanyfunctions.h, plugins/splitwindow.c, src/plugindata.h,
   src/plugins.c, src/utils.c, src/utils.h:
   Move utils_str_remove_chars() from the plugins/splitwindow.c to
   src/utils.c and add it to the plugin API.
   Make utils_str_remove_chars() work on a new copy of the input string
   instead of modifying it in place.
 * src/toolbar.c:
   Remove underscores from the toolbar items labels.
 * src/utils.c:
   Fix typos.
 * plugins/splitwindow.c:
   Fix broken 'Show the current document' tool button icon.

